Fix vocab-card layout overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -2056,12 +2056,7 @@ body::-webkit-scrollbar-thumb, .flashcard::-webkit-scrollbar-thumb, .weeks-scrol
     display: flex;
     flex-direction: column;
 }
-.vocab-card .center-stage {
-    display: flex;
-    flex-direction: column;
-    min-height: 0;
-    height: 100%;
-}
+
 .vocab-card .example-box {
     flex-grow: 1;
     min-height: 0;
